# githubkit

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/actions/setup-poetry/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: codecov.yml  docs.yml  pyright.yml  release-schemas.yml  release.yml  ruff.yml
codegen/: __init__.py  __main__.py  config.py  log.py  pyproject.toml  source.py
codegen/parser/: __init__.py  data.py  openapi.py  utils.py
codegen/parser/endpoints/: __init__.py  endpoint.py  parameter.py  request_body.py  response.py
codegen/parser/models/: __init__.py
codegen/parser/schemas/: __init__.py  any_schema.py  bool_schema.py  enum_schema.py  float_schema.py  int_schema.py  list_schema.py  model_schema.py  none_schema.py  property.py  schema.py  string_schema.py  union_schema.py
codegen/parser/webhooks/: __init__.py
codegen/templates/: __init__.py.jinja  header.jinja  versions.py.jinja
codegen/templates/client/: _param.py.jinja  _request.py.jinja  client.py.jinja  param.py.jinja  request.py.jinja  response.py.jinja
codegen/templates/core/: rest.py.jinja  webhooks.py.jinja
codegen/templates/latest/: models.py.jinja  types.py.jinja  webhooks.py.jinja
codegen/templates/model/: model.py.jinja
codegen/templates/models/: _docstring.py.jinja  _model.py.jinja  group.py.jinja  models.py.jinja  type_group.py.jinja  types.py.jinja  webhook_types.py.jinja  webhooks.py.jinja
codegen/templates/namespace/: namespace.py.jinja
codegen/templates/rest/: __init__.py.jinja  _docstring.py.jinja  _param.py.jinja  _request.py.jinja  _response.py.jinja  client.py.jinja
codegen/templates/types/: types.py.jinja
codegen/templates/versions/: __init__.py.jinja  rest.py.jinja  webhooks.py.jinja
codegen/templates/webhooks/: __init__.py.jinja  _namespace.py.jinja  _types.py.jinja  event.py.jinja  types.py.jinja
docs/: contributing.md  index.md  installation.md  quickstart.md
docs/quickstart/: call-api-with-pat.md  calling-api-with-pat.md  connecting-to-github-enterprise.md  github-app.md  index.md  oauth-device-flow.md  oauth-web-flow.md
docs/usage/: authentication.md  auto-retry.md  configuration.md  error-handling.md  graphql.md  rest-api.md  unit-test.md  webhooks.md
docs/usage/getting-started/: authentication.md  configuration.md  reusing-client.md
envs/pydantic-v1/: pyproject.toml
envs/pydantic-v2/: pyproject.toml
envs/test/: pyproject.toml
githubkit/: __init__.py  auth.py  client.py  compat.py  config.py  core.py  exception.py  github.py  hishel.py  lazy_module.py  log.py  paginator.py  response.py  retry.py  throttling.py  typing.py  utils.py
githubkit/auth/: __init__.py  _url.py  action.py  app.py  base.py  oauth.py  token.py  unauth.py
githubkit/cache/: __init__.py  base.py  mem_cache.py  redis.py
githubkit/graphql/: __init__.py  models.py  paginator.py
githubkit/module_hooks/: alias_module.py  lazy_module.py
githubkit/oauth/: __init__.py  create_device_code.py  exchange_device_code.py  exchange_web_flow_code.py  refresh_token.py
githubkit/rest/: __init__.py  actions.py  activity.py  apps.py  billing.py  checks.py  classroom.py  code_scanning.py  codes_of_conduct.py  codespaces.py  copilot.py  core.py  dependabot.py  dependency_graph.py  emojis.py  enterprise_admin.py  exception.py  gists.py  git.py  gitignore.py  interactions.py  issues.py  licenses.py  markdown.py  meta.py  migrations.py  models.py  oauth_authorizations.py  oidc.py  orgs.py  packages.py  paginate.py  paginator.py  projects.py  pulls.py  rate_limit.py  reactions.py  repos.py  response.py  scim.py  (+8 more)
githubkit/versions/: __init__.py  rest.py  webhooks.py
githubkit/versions/ghec_v2022_11_28/models/: __init__.py  group_0000.py  group_0001.py  group_0002.py  group_0003.py  group_0004.py  group_0005.py  group_0006.py  group_0007.py  group_0008.py  group_0009.py  group_0010.py  group_0011.py  group_0012.py  group_0013.py  group_0014.py  group_0015.py  group_0016.py  group_0017.py  group_0018.py  group_0019.py  group_0020.py  group_0021.py  group_0022.py  group_0023.py  group_0024.py  group_0025.py  group_0026.py  group_0027.py  group_0028.py  group_0029.py  group_0030.py  group_0031.py  group_0032.py  group_0033.py  group_0034.py  group_0035.py  group_0036.py  group_0037.py  group_0038.py  (+1414 more)
githubkit/versions/ghec_v2022_11_28/rest/: __init__.py  actions.py  activity.py  agent_tasks.py  apps.py  billing.py  campaigns.py  checks.py  classroom.py  code_scanning.py  code_security.py  codes_of_conduct.py  codespaces.py  copilot.py  copilot_spaces.py  credentials.py  dependabot.py  dependency_graph.py  emojis.py  enterprise_admin.py  enterprise_team_memberships.py  enterprise_team_organizations.py  enterprise_teams.py  gists.py  git.py  gitignore.py  hosted_compute.py  interactions.py  issues.py  licenses.py  markdown.py  meta.py  migrations.py  oidc.py  orgs.py  packages.py  private_registries.py  projects.py  projects_classic.py  pulls.py  (+10 more)
githubkit/versions/ghec_v2022_11_28/types/: __init__.py  group_0000.py  group_0001.py  group_0002.py  group_0003.py  group_0004.py  group_0005.py  group_0006.py  (+1441 more)
githubkit/versions/latest/: __init__.py  models.py  types.py  webhooks.py
githubkit/versions/v2022_11_28/: __init__.py
githubkit/webhooks/: __init__.py  discriminator.py  models.py  parse.py  types.py  verify.py
scripts/: run-codegen.sh  run-tests.sh  setup-envs.sh  test-all-models.sh  update-envs.sh
tests/: conftest.py  utils.py
tests/test_auth/: test_auth_switch.py
tests/test_graphql/: test_endpoint.py  test_graphql.py
tests/test_rest/: test_cache.py  test_call.py
tests/test_unit_test/: fake_response.json  test_event_hooks.py  test_mock_transport.py  test_unit_test.py
tests/test_versions/: models.py  test_models.py  test_types.py  types.py
tests/test_webhooks/: test_parse.py
tests/test_webhooks/assets/: pull_request_opened.json  push.json
(+6177 files in other folders)
